--- a/eng/pipelines/pr-tryit.yml
+++ b/eng/pipelines/pr-tryit.yml
@@ -49,3 +49,6 @@ jobs:
               --destination-path $(TYPESPEC_WEBSITE_BASE_PATH) \
               --source "./packages/website/build/" \
               --overwrite
+
+      - script: node core/eng/scripts/create-tryit-comment.js "cadl-azure"
+        displayName: Check already commented
