--- a/eng/feeds/data-plane/tspconfig_stand_alone.yaml
+++ b/eng/feeds/data-plane/tspconfig_stand_alone.yaml
@@ -9,7 +9,7 @@ emit:
 options:
   "@azure-tools/typespec-autorest":
     azure-resource-provider-folder: "data-plane"
-    emitter-output-dir: "{project-root}/.."
+    ## emitter-output-dir: "{project-root}/.."
     examples-directory: "{project-root}/examples"
     output-file: "{azure-resource-provider-folder}/{service-name}/{version-status}/{version}/openapi.json"
   "@azure-tools/typespec-python":    
@@ -31,6 +31,3 @@ options:
   "@azure-tools/typespec-java":
     package-dir: "{{#normalizePackageName}}{{parameters.ServiceNamespace}}{{/normalizePackageName}}"
     namespace: com.{{#toLowerCase}}{{parameters.ServiceNamespace}}{{/toLowerCase}}
-linter:
-  extends:
-    - "@azure-tools/typespec-azure-core/all"
