revert references back and delete 'lint' only

--- a/packages/typespec-azure-portal-core/tsconfig.json
+++ b/packages/typespec-azure-portal-core/tsconfig.json
@@ -1,6 +1,11 @@
 {
   "extends": "../../core/packages/tsconfig.json",
   "composite": true,
+  "references": [
+    { "path": "../../core/packages/compiler/tsconfig.json" },
+    { "path": "../../core/packages/rest/tsconfig.json" },
+    { "path": "../../core/packages/openapi/tsconfig.json" }
+  ],
   "compilerOptions": {
     "outDir": "dist",
     "rootDir": ".",
