--- a/packages/samples/package.json
+++ b/packages/samples/package.json
@@ -56,6 +56,8 @@
     "@types/node": "~18.11.9",
     "cross-env": "~7.0.3",
     "eslint": "^8.55.0",
+    "vitest": "^1.1.0",
+    "@vitest/coverage-v8": "^1.1.0",
     "mocha": "~10.2.0",
     "autorest": "~3.3.2",
     "rimraf": "~5.0.1",
