--- a/packages/typespec-autorest/package.json
+++ b/packages/typespec-autorest/package.json
@@ -74,6 +74,8 @@
     "@typespec/eslint-plugin": "workspace:~0.51.0",
     "@typespec/tspd": "workspace:~0.46.0",
     "eslint": "^8.55.0",
+    "vitest": "^1.1.0",
+    "@vitest/coverage-v8": "^1.1.0",
     "mocha": "~10.2.0",
     "mocha-junit-reporter": "~2.2.1",
     "mocha-multi-reporters": "~1.5.1",
