--- a/packages/typespec-diff/package.json
+++ b/packages/typespec-diff/package.json
@@ -76,6 +76,8 @@
     "@azure-tools/typespec-azure-resource-manager": "workspace:~0.37.1",
     "@azure-tools/typespec-azure-core": "workspace:~0.37.2",
     "eslint": "^8.55.0",
+    "vitest": "^1.1.0",
+    "@vitest/coverage-v8": "^1.1.0",
     "mocha": "~10.2.0",
     "mocha-junit-reporter": "~2.2.1",
     "mocha-multi-reporters": "~1.5.1",
