--- a/packages/typespec-service-csharp/package.json
+++ b/packages/typespec-service-csharp/package.json
@@ -70,6 +70,8 @@
     "c8": "~8.0.1",
     "rimraf": "~5.0.1",
     "typescript": "~5.3.3",
+    "vitest": "^1.1.0",
+    "@vitest/coverage-v8": "^1.1.0",
     "mocha": "~10.2.0",
     "mocha-junit-reporter": "~2.2.1",
     "mocha-multi-reporters": "~1.5.1"
