--- a/packages/typespec-azure-core/tsconfig.json
+++ b/packages/typespec-azure-core/tsconfig.json
@@ -10,8 +10,7 @@
   "compilerOptions": {
     "outDir": "dist",
     "rootDir": ".",
-    "tsBuildInfoFile": "temp/tsconfig.tsbuildinfo",
-    "types": ["node", "mocha"]
+    "tsBuildInfoFile": "temp/tsconfig.tsbuildinfo"
   },
   "include": ["src/**/*.ts", "test/**/*.ts"]
 }
