--- a/packages/typespec-service-csharp/tsconfig.json
+++ b/packages/typespec-service-csharp/tsconfig.json
@@ -8,8 +8,7 @@
   "compilerOptions": {
     "outDir": "dist",
     "rootDir": ".",
-    "tsBuildInfoFile": "temp/tsconfig.tsbuildinfo",
-    "types": ["node", "mocha"]
+    "tsBuildInfoFile": "temp/tsconfig.tsbuildinfo"
   },
   "include": ["src/**/*.ts", "test/**/*.ts"],
   "exclude": ["dist", "node_modules", "temp", "input", "output"]
