--- a/packages/typespec-autorest/package.json
+++ b/packages/typespec-autorest/package.json
@@ -41,7 +41,7 @@
     "regen-autorest-openapi-schema": "tsp compile ./schema/autorest-openapi-schema.tsp --warn-as-error && node ./.scripts/schema-json-to-js.js",
     "test": "vitest run",
     "test:watch": "vitest -w",
-    "test-official": "vitest run --coverage",
+    "test-official": "vitest run --coverage --reporter=junit --reporter=default",
     "lint": "eslint . --ext .ts --max-warnings=0",
     "lint:fix": "eslint . --fix --ext .ts",
     "regen-docs": "tspd doc .  --enable-experimental  --output-dir ../../docs/emitters/typespec-autorest/reference"
