--- a/packages/typespec-service-csharp/package.json
+++ b/packages/typespec-service-csharp/package.json
@@ -33,7 +33,7 @@
     "watch": "tsc -p . --watch",
     "test": "vitest run",
     "test:watch": "vitest -w",
-    "test-official": "vitest run --coverage",
+    "test-official": "vitest run --coverage --reporter=junit --reporter=default",
     "lint": "eslint . --ext .ts --max-warnings=0",
     "lint:fix": "eslint . --fix --ext .ts",
     "regen-docs": "tspd doc .  --enable-experimental  --output-dir ../../docs/emitters/typespec-service-csharp/reference"
