--- a/packages/typespec-azure-core/tsconfig.json
+++ b/packages/typespec-azure-core/tsconfig.json
@@ -11,5 +11,5 @@
     "rootDir": ".",
     "tsBuildInfoFile": "temp/tsconfig.tsbuildinfo"
   },
-  "include": ["src/**/*.ts", "test/**/*.ts"]
+  "include": ["src/**/*.ts", "test/**/*.ts", "vitest.config.ts"]
 }
