--- a/packages/typespec-service-csharp/tsconfig.json
+++ b/packages/typespec-service-csharp/tsconfig.json
@@ -10,6 +10,6 @@
     "rootDir": ".",
     "tsBuildInfoFile": "temp/tsconfig.tsbuildinfo"
   },
-  "include": ["src/**/*.ts", "test/**/*.ts"],
+  "include": ["src/**/*.ts", "test/**/*.ts", "vitest.config.ts"],
   "exclude": ["dist", "node_modules", "temp", "input", "output"]
 }
