--- a/packages/samples/package.json
+++ b/packages/samples/package.json
@@ -28,8 +28,8 @@
     "watch": "tsc -p . --watch",
     "test": "vitest run",
     "test-official": "vitest run --coverage --reporter=junit --reporter=default",
-    "test:regen": "cross-env RECORD=true mocha",
-    "regen-samples": "cross-env RECORD=true mocha"
+    "test:regen": "cross-env RECORD=true vitest run",
+    "regen-samples": "cross-env RECORD=true vitest run"
   },
   "files": [
     "lib/*.tsp",
@@ -52,13 +52,12 @@
     "@typespec/internal-build-utils": "workspace:~0.51.0",
     "@typespec/eslint-config-typespec": "workspace:~0.51.0",
     "@typespec/samples": "workspace:~1.0.0",
-    "@types/mocha": "~10.0.6",
+    
     "@types/node": "~18.11.9",
     "cross-env": "~7.0.3",
     "eslint": "^8.55.0",
     "vitest": "^1.1.0",
     "@vitest/coverage-v8": "^1.1.0",
-    "mocha": "~10.2.0",
     "autorest": "~3.3.2",
     "rimraf": "~5.0.1",
     "typescript": "~5.3.3"
