--- a/packages/typespec-service-csharp/package.json
+++ b/packages/typespec-service-csharp/package.json
@@ -61,7 +61,6 @@
     "@typespec/rest": "workspace:~0.51.0",
     "@typespec/http": "workspace:~0.51.0",
     "@azure-tools/typespec-azure-core": "workspace:~0.37.2",
-    "@types/mocha": "~10.0.6",
     "@types/node": "~18.11.9",
     "@typespec/eslint-config-typespec": "workspace:~0.51.0",
     "@typespec/library-linter": "workspace:~0.51.0",
@@ -72,9 +71,6 @@
     "rimraf": "~5.0.1",
     "typescript": "~5.3.3",
     "vitest": "^1.1.0",
-    "@vitest/coverage-v8": "^1.1.0",
-    "mocha": "~10.2.0",
-    "mocha-junit-reporter": "~2.2.1",
-    "mocha-multi-reporters": "~1.5.1"
+    "@vitest/coverage-v8": "^1.1.0"
   }
 }
