--- a/packages/typespec-azure-resource-manager/tsconfig.json
+++ b/packages/typespec-azure-resource-manager/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends": "../../core/packages/tsconfig.json",
+  "extends": "../../core/tsconfig.base.json",
   "composite": true,
   "references": [
     { "path": "../../core/packages/compiler/tsconfig.json" },
