--- a/tsconfig.ws.json
+++ b/tsconfig.ws.json
@@ -1,6 +1,6 @@
 {
   "references": [
-    { "path": "core/tsconfig.json" },
+    { "path": "core/tsconfig.ws.json" },
     { "path": "packages/typespec-autorest/tsconfig.json" },
     { "path": "packages/typespec-azure-core/tsconfig.json" },
     { "path": "packages/typespec-azure-resource-manager/tsconfig.json" },
