--- a/eng/pipelines/templates/install.yml
+++ b/eng/pipelines/templates/install.yml
@@ -23,7 +23,7 @@ steps:
     displayName: "Log tool versions used"
 
   # purge before install to ensure a clean state between retries
-  - script: pnpm run install --purge
+  - script: pnpm run install --frozen-lockfile
     displayName: Install JavaScript Dependencies
     retryCountOnTaskFailure: 3
 
