--- a/.github/workflows/website-gh-pages.yml
+++ b/.github/workflows/website-gh-pages.yml
@@ -34,8 +34,7 @@ jobs:
         with:
           node-version: 18.x
 
-      - name: Install pnpm
-        run: npm install -g pnpm@8.13.1
+      - uses: pnpm/action-setup@v2
 
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
