--- a/.github/workflows/website-gh-pages.yml
+++ b/.github/workflows/website-gh-pages.yml
@@ -37,7 +37,7 @@ jobs:
       - uses: pnpm/action-setup@v2
 
       - name: Install dependencies
-        run: pnpm install --frozen-lockfile
+        run: pnpm install
 
       - name: Build
         run: pnpm run build --to @azure-tools/typespec-azure-website -v
