--- a/eng/pipelines/templates/install.yml
+++ b/eng/pipelines/templates/install.yml
@@ -26,7 +26,7 @@ steps:
     displayName: "Log tool versions used"
 
   # purge before install to ensure a clean state between retries
-  - script: pnpm install --frozen-lockfile
+  - script: pnpm install
     displayName: Install JavaScript Dependencies
     retryCountOnTaskFailure: 3
 
