--- a/eng/pipelines/ci.yml
+++ b/eng/pipelines/ci.yml
@@ -35,7 +35,7 @@ jobs:
           nodeVersion: "20.x"
       - template: ./templates/build.yml
 
-      - script: pnpm run test-official --parallelism max --verbose
+      - script: pnpm run test-official --verbose
         displayName: Test
 
       - template: ./templates/upload-coverage.yml
