--- a/eng/pipelines/templates/build.yml
+++ b/eng/pipelines/templates/build.yml
@@ -1,5 +1,5 @@
 # Template building all packages with parallelism.
 
 steps:
-  - script: pnpm run build --verbose
+  - script: pnpm run build
     displayName: Build
