--- a/eng/pipelines/jobs/build-and-test.yml
+++ b/eng/pipelines/jobs/build-and-test.yml
@@ -20,7 +20,7 @@ steps:
 
   - template: ../templates/build.yml
 
-  - script: pnpm run test-official --verbose
+  - script: pnpm run test-official
     displayName: Test
 
   - template: ../templates/upload-coverage.yml
@@ -29,7 +29,7 @@ steps:
     displayName: Check Formatting
     condition: ne(variables['Agent.OS'], 'Windows_NT')
 
-  - script: pnpm run lint  --verbose
+  - script: pnpm run lint
     displayName: Lint
     condition: ne(variables['Agent.OS'], 'Windows_NT')
 
