--- a/eng/pipelines/ci.yml
+++ b/eng/pipelines/ci.yml
@@ -41,9 +41,9 @@ jobs:
       - template: ./templates/upload-coverage.yml
 
       - script: |
-          set NPM_AUTH_TOKEN=$(azure-sdk-npm-token)
-          pnpm run publish --publish --include-all --version-policy typespec-azure --set-access-level public
-        displayName: Release
+          pnpm config set //registry.npmjs.org/:_authToken=$(azure-sdk-npm-token)
+          pnpm -r publish --access public --no-git-checks
+        displayName: Publish packages
 
       - task: AzureCLI@1
         displayName: "Publish bundled packages to package storage"
@@ -90,6 +90,6 @@ jobs:
         displayName: Bump version to prerelease targets
 
       - script: |
-          set NPM_AUTH_TOKEN=$(azure-sdk-npm-token)
-          pnpm run publish --publish --include-all --version-policy typespec-azure --set-access-level public --tag next
-        displayName: Release
+          pnpm config set //registry.npmjs.org/:_authToken=$(azure-sdk-npm-token)
+          pnpm -r publish --access public --no-git-checks --tag next
+        displayName: Publish packages
