--- a/.prettierignore
+++ b/.prettierignore
@@ -4,10 +4,13 @@
 **/bin/
 **/obj/
 **/.vs/
-**/common/temp/
-**/common/scripts/
-**/common/changes/
-**/common/config/rush/pnpm-lock.yaml
+common/temp/
+common/scripts/
+common/changes/
+
+# Pnpm lock file
+pnpm-lock.yaml
+core/pnpm-lock.yaml
 
 # Coverage report directory
 **/coverage/
