--- a/package.json
+++ b/package.json
@@ -1,4 +1,50 @@
 {
   "name": "@azure-tools/typespec-azure-monorepo",
-  "private": true
+  "version": "0.0.1",
+  "private": true,
+  "packageManager": "pnpm@8.13.1",
+  "scripts": {
+    "build": "pnpm -r run build",
+    "check-format": "npm run -s prettier -- --check",
+    "check-version-mismatch": "syncpack list-mismatches",
+    "clean": "pnpm -r run clean",
+    "cspell": "cspell --no-progress \"**/*.{md,tsp,ts,tsx}\" ",
+    "fix-version-mismatch": "syncpack fix-mismatches",
+    "format": "pnpm run prettier --write",
+    "lint": "pnpm -r run lint",
+    "merge-coverage": "c8 -- report --reporter=cobertura --reporter=text",
+    "preinstall": "npx only-allow pnpm",
+    "prettier": "prettier .",
+    "regen-docs": "pnpm -r run regen-docs",
+    "update-latest-docs": "pnpm -r run update-latest-docs",
+    "regen-samples": "pnpm -r run regen-samples",
+    "test-official": "pnpm -r run test-official",
+    "test:e2e": "pnpm -r run e2e",
+    "test": "pnpm -r run test",
+    "watch": "tsc --build ./tsconfig.ws.json --watch",
+    "prepare-publish": "pnpm changeset version",
+    "pack:all": "node ./eng/scripts/pack-all.js",
+    "dogfood": "pnpm install && pnpm build && pnpm -r dogfood"
+  },
+  "devDependencies": {
+    "@changesets/cli": "^2.26.2",
+    "@pnpm/find-workspace-packages": "^6.0.9",
+    "c8": "^8.0.1",
+    "cspell": "^6.31.1",
+    "prettier": "~3.1.1",
+    "prettier-plugin-organize-imports": "~3.2.4",
+    "syncpack": "^11.2.1",
+    "typescript": "~5.3.3",
+    "vitest": "^1.1.0"
+  },
+  "syncpack": {
+    "dependencyTypes": [
+      "dev",
+      "overrides",
+      "peer",
+      "pnpmOverrides",
+      "prod",
+      "resolutions"
+    ]
+  }
 }
