--- a/package.json
+++ b/package.json
@@ -9,30 +9,32 @@
     "check-version-mismatch": "syncpack list-mismatches",
     "clean": "pnpm -r run clean",
     "cspell": "cspell --no-progress \"**/*.{md,tsp,ts,tsx}\" ",
+    "dogfood": "pnpm install && pnpm build && pnpm -r dogfood",
     "fix-version-mismatch": "syncpack fix-mismatches",
     "format": "pnpm run prettier --write",
     "lint": "pnpm -r run lint",
     "merge-coverage": "c8 -- report --reporter=cobertura --reporter=text",
+    "pack:all": "node ./eng/scripts/pack-all.js",
     "preinstall": "npx only-allow pnpm",
+    "prepare-publish": "pnpm changeset version",
     "prettier": "prettier .",
+    "purge": "rimraf node_modules/ --glob packages/*/node_modules/",
     "regen-docs": "pnpm -r run regen-docs",
-    "update-latest-docs": "pnpm -r run update-latest-docs",
     "regen-samples": "pnpm -r run regen-samples",
     "test-official": "pnpm -r run test-official",
     "test:e2e": "pnpm -r run e2e",
     "test": "pnpm -r run test",
-    "watch": "tsc --build ./tsconfig.ws.json --watch",
-    "prepare-publish": "pnpm changeset version",
-    "pack:all": "node ./eng/scripts/pack-all.js",
-    "dogfood": "pnpm install && pnpm build && pnpm -r dogfood"
+    "update-latest-docs": "pnpm -r run update-latest-docs",
+    "watch": "tsc --build ./tsconfig.ws.json --watch"
   },
   "devDependencies": {
     "@changesets/cli": "^2.26.2",
     "@pnpm/find-workspace-packages": "^6.0.9",
     "c8": "^8.0.1",
     "cspell": "^6.31.1",
-    "prettier": "~3.1.1",
     "prettier-plugin-organize-imports": "~3.2.4",
+    "prettier": "~3.1.1",
+    "rimraf": "~5.0.1",
     "syncpack": "^11.2.1",
     "typescript": "~5.3.3",
     "vitest": "^1.1.0"
