--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "private": true,
   "packageManager": "pnpm@8.13.1",
   "scripts": {
-    "build": "pnpm -r run build",
-    "check-format": "npm run -s prettier -- --check",
+    "build": "pnpm -r --workspace-concurrency=Infinity --aggregate-output build ",
+    "check-format": "pnpm run prettier --check",
     "check-version-mismatch": "syncpack list-mismatches",
     "clean": "pnpm -r run clean",
-    "cspell": "cspell --no-progress \"**/*.{md,tsp,ts,tsx}\" ",
+    "cspell": "cspell --no-progress \"**/*.{md,ts,tsx}\" ",
     "dogfood": "pnpm install && pnpm build && pnpm -r dogfood",
     "fix-version-mismatch": "syncpack fix-mismatches",
     "format": "pnpm run prettier --write",
@@ -21,9 +21,9 @@
     "purge": "rimraf node_modules/ --glob packages/*/node_modules/",
     "regen-docs": "pnpm -r run regen-docs",
     "regen-samples": "pnpm -r run regen-samples",
-    "test-official": "pnpm -r run test-official",
+    "test-official": "pnpm -r --parallel --aggregate-output test-official",
     "test:e2e": "pnpm -r run e2e",
-    "test": "pnpm -r run test",
+    "test": "pnpm -r --parallel --aggregate-output run test",
     "update-latest-docs": "pnpm -r run update-latest-docs",
     "watch": "tsc --build ./tsconfig.ws.json --watch"
   },
