--- a/package.json
+++ b/package.json
@@ -12,14 +12,14 @@
     "dogfood": "pnpm install && pnpm build && pnpm -r dogfood",
     "fix-version-mismatch": "syncpack fix-mismatches",
     "format": "pnpm run prettier --write",
-    "lint": "pnpm -r run lint",
+    "lint": "pnpm -r  --parallel --aggregate-output run lint",
     "merge-coverage": "c8 -- report --reporter=cobertura --reporter=text",
     "pack:all": "node ./eng/scripts/pack-all.js",
     "preinstall": "npx only-allow pnpm",
     "prepare-publish": "pnpm changeset version",
     "prettier": "prettier .",
     "purge": "rimraf node_modules/ --glob packages/*/node_modules/",
-    "regen-docs": "pnpm -r run regen-docs",
+    "regen-docs": "pnpm -r  --parallel --aggregate-output run regen-docs",
     "regen-samples": "pnpm -r run regen-samples",
     "test-official": "pnpm -r --parallel --aggregate-output test-official",
     "test:e2e": "pnpm -r run e2e",
