--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -14,7 +14,7 @@
     "write-heading-ids": "docusaurus write-heading-ids",
     "update-latest-docs": "rimraf versions.json ./versioned_docs ./versioned_sidebars && docusaurus docs:version latest && npm run update-playground-versions",
     "update-playground-versions": "node ./.scripts/update-playground-versions.mjs",
-    "regen-all-packages-docs": "node ../../eng/scripts/npm-run-for-deps.js regen-docs"
+    "regen-all-packages-docs": "pnpm -w --filter \"@azure-tools/typespec-azure-website...\" run regen-docs"
   },
   "dependencies": {
     "@docusaurus/core": "^3.0.0",
