--- a/.github/workflows/consistency.yml
+++ b/.github/workflows/consistency.yml
@@ -32,4 +32,4 @@ jobs:
         if: ${{ !startsWith(github.head_ref, 'publish/') && !startsWith(github.head_ref, 'dependabot/') && !startsWith(github.head_ref, 'backmerge/') }}
 
       - run: node eng/scripts/validate-core-submodule.js
-        displayName: Check that core submodule is merged to core repo
+        name: Check that core submodule is merged to core repo
