--- a/packages/samples/package.json
+++ b/packages/samples/package.json
@@ -57,6 +57,7 @@
     "eslint": "^8.55.0",
     "vitest": "^1.1.0",
     "@vitest/coverage-v8": "^1.1.0",
+    "@vitest/ui": "~1.1.3",
     "autorest": "~3.3.2",
     "rimraf": "~5.0.1",
     "typescript": "~5.3.3"
