--- a/packages/typespec-service-csharp/package.json
+++ b/packages/typespec-service-csharp/package.json
@@ -32,7 +32,7 @@
     "compile": "tsc -p .",
     "watch": "tsc -p . --watch",
     "test": "vitest run",
-    "test:watch": "vitest -w",
+    "test:ui": "vitest --ui",
     "test-official": "vitest run --coverage --reporter=junit --reporter=default --no-file-parallelism",
     "lint": "eslint . --ext .ts --max-warnings=0",
     "lint:fix": "eslint . --fix --ext .ts",
