--- a/packages/typespec-client-generator-core/tsconfig.json
+++ b/packages/typespec-client-generator-core/tsconfig.json
@@ -10,5 +10,5 @@
     "rootDir": ".",
     "tsBuildInfoFile": "temp/tsconfig.tsbuildinfo"
   },
-  "include": ["src/**/*.ts", "test/**/*.ts", "vitest.config.ts"]
+  "include": ["src/**/*.ts", "test/**/*.ts"]
 }
