Add debug config

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -32,6 +32,17 @@
       }
     },
     {
+      "type": "node",
+      "request": "launch",
+      "name": "Debug Current Test File",
+      "autoAttachChildProcesses": true,
+      "skipFiles": ["<node_internals>/**", "**/node_modules/**"],
+      "program": "${workspaceRoot}/core/packages/compiler/node_modules/vitest/vitest.mjs",
+      "args": ["run", "${relativeFile}"],
+      "smartStep": true,
+      "console": "integratedTerminal"
+    },
+    {
       "name": "Attach to Language Server",
       "type": "node",
       "request": "attach",
