--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -39,8 +39,7 @@
       "skipFiles": ["<node_internals>/**", "**/node_modules/**"],
       "program": "${workspaceRoot}/core/packages/compiler/node_modules/vitest/vitest.mjs",
       "args": ["run", "${relativeFile}"],
-      "smartStep": true,
-      "console": "integratedTerminal"
+      "smartStep": true
     },
     {
       "name": "Attach to Language Server",
