--- a/packages/samples/package.json
+++ b/packages/samples/package.json
@@ -27,6 +27,7 @@
     "build": "tsc -p .",
     "watch": "tsc -p . --watch",
     "test": "vitest run",
+    "test:watch": "vitest -w",
     "test-official": "vitest run --coverage --reporter=junit --reporter=default --no-file-parallelism",
     "test:regen": "cross-env RECORD=true vitest run",
     "regen-samples": "cross-env RECORD=true vitest run"
