--- a/packages/samples/package.json
+++ b/packages/samples/package.json
@@ -27,6 +27,7 @@
     "build": "tsc -p .",
     "watch": "tsc -p . --watch",
     "test": "vitest run",
+    "test:watch": "vitest -w",
     "test-official": "vitest run --coverage --reporter=junit --reporter=default --no-file-parallelism",
     "test:regen": "cross-env RECORD=true vitest run",
     "regen-samples": "cross-env RECORD=true vitest run"
@@ -55,8 +56,9 @@
     "@types/node": "~18.11.9",
     "cross-env": "~7.0.3",
     "eslint": "^8.55.0",
-    "vitest": "^1.1.0",
+    "vitest": "^1.2.0",
     "@vitest/coverage-v8": "^1.1.0",
+    "@vitest/ui": "~1.1.3",
     "autorest": "~3.3.2",
     "rimraf": "~5.0.1",
     "typescript": "~5.3.3"
