--- a/packages/typespec-client-generator-core/package.json
+++ b/packages/typespec-client-generator-core/package.json
@@ -41,6 +41,7 @@
     "lint-typespec-library": "tsp compile . --warn-as-error --import @typespec/library-linter --no-emit",
     "test": "vitest run",
     "test:watch": "vitest -w",
+    "test:ui": "vitest --ui",
     "test-official": "vitest run --coverage --reporter=junit --reporter=default --no-file-parallelism",
     "lint": "eslint . --ext .ts --max-warnings=0",
     "lint:fix": "eslint . --fix --ext .ts",
@@ -74,8 +75,9 @@
     "@typespec/tspd": "workspace:~0.46.0",
     "@types/node": "~18.11.9",
     "eslint": "^8.55.0",
-    "vitest": "^1.1.0",
+    "vitest": "^1.2.0",
     "@vitest/coverage-v8": "^1.1.0",
+    "@vitest/ui": "~1.1.3",
     "c8": "~8.0.1",
     "rimraf": "~5.0.1",
     "typescript": "~5.3.3",
