--- a/packages/typespec-service-csharp/package.json
+++ b/packages/typespec-service-csharp/package.json
@@ -33,6 +33,7 @@
     "watch": "tsc -p . --watch",
     "test": "vitest run",
     "test:watch": "vitest -w",
+    "test:ui": "vitest --ui",
     "test-official": "vitest run --coverage --reporter=junit --reporter=default --no-file-parallelism",
     "lint": "eslint . --ext .ts --max-warnings=0",
     "lint:fix": "eslint . --fix --ext .ts",
@@ -70,7 +71,7 @@
     "c8": "~8.0.1",
     "rimraf": "~5.0.1",
     "typescript": "~5.3.3",
-    "vitest": "^1.1.0",
+    "vitest": "^1.2.0",
     "@vitest/coverage-v8": "^1.1.0"
   }
 }
