--- a/eng/feeds/arm/tspconfig_stand_alone.yaml
+++ b/eng/feeds/arm/tspconfig_stand_alone.yaml
@@ -3,6 +3,7 @@ emit:
 options:
   '@azure-tools/typespec-autorest':
     ## emitter-output-dir: "{project-root}/.."
+    use-read-only-status-schema: true
     azure-resource-provider-folder: "resource-manager"
     output-file: "{azure-resource-provider-folder}/{service-name}/{version-status}/{version}/openapi.json"
     examples-directory: "{project-root}/examples"
