--- a/.github/workflows/website-gh-pages.yml
+++ b/.github/workflows/website-gh-pages.yml
@@ -34,11 +34,13 @@ jobs:
         with:
           node-version: 18.x
 
+      - uses: pnpm/action-setup@v2
+
       - name: Install dependencies
-        run: node common/scripts/install-run-rush.js update
+        run: pnpm install
 
       - name: Build
-        run: node common/scripts/install-run-rush.js build --to @azure-tools/typespec-azure-website -v
+        run: pnpm run build --to @azure-tools/typespec-azure-website -v
         env:
           TYPESPEC_WEBSITE_BASE_PATH: "/typespec-azure/"
           NODE_OPTIONS: "--max_old_space_size=4096"
