--- a/eng/pipelines/jobs/build-and-test.yml
+++ b/eng/pipelines/jobs/build-and-test.yml
@@ -20,16 +20,16 @@ steps:
 
   - template: ../templates/build.yml
 
-  - script: node common/scripts/install-run-rush.js test-official --parallelism max --verbose
+  - script: pnpm run test-official
     displayName: Test
 
   - template: ../templates/upload-coverage.yml
 
-  - script: node common/scripts/install-run-rush.js check-format
+  - script: pnpm run check-format
     displayName: Check Formatting
     condition: ne(variables['Agent.OS'], 'Windows_NT')
 
-  - script: node common/scripts/install-run-rush.js lint --parallelism max --verbose
+  - script: pnpm run lint
     displayName: Lint
     condition: ne(variables['Agent.OS'], 'Windows_NT')
 
@@ -40,13 +40,13 @@ steps:
   - script: node eng/scripts/check-for-changed-files.js
     displayName: Check Git Status For Changed Files
 
-  - script: node common/scripts/install-run-rush.js cspell
+  - script: pnpm run cspell
     displayName: Spell check
     condition: ne(variables['Agent.OS'], 'Windows_NT')
 
   # Unlink node_modules folders to significantly improve performance of subsequent tasks
   # which need to walk the directory tree (and are hardcoded to follow symlinks).
-  - script: node common/scripts/install-run-rush.js purge
+  - script: pnpm run purge
     displayName: "Purge dependencies"
     condition: always()
 
@@ -74,7 +74,8 @@ steps:
     displayName: Publish non-core test results
     condition: always()
 
-  - publish: ./core/packages/playground-website/test-results
-    artifact: "uitestresults-${{ parameters.poolName }}-node-${{ parameters.nodeVersion }}"
-    displayName: Publish UI tests artifacts
-    condition: ne(variables['Agent.OS'], 'Windows_NT')
+  # Disable for now as e2e test are disabled - REMOVE BEFORE MERGING
+  # - publish: ./core/packages/playground-website/test-results
+  #   artifact: "uitestresults-${{ parameters.poolName }}-node-${{ parameters.nodeVersion }}"
+  #   displayName: Publish UI tests artifacts
+  #   condition: ne(variables['Agent.OS'], 'Windows_NT')
