--- a/packages/typespec-autorest/package.json
+++ b/packages/typespec-autorest/package.json
@@ -55,7 +55,7 @@
   ],
   "peerDependencies": {
     "@typespec/compiler": "workspace:~0.52.0",
-    "@azure-tools/typespec-azure-core": "workplace:~0.38.0",
+    "@azure-tools/typespec-azure-core": "workspace:~0.38.0",
     "@azure-tools/typespec-client-generator-core": "workspace:~0.38.0",
     "@typespec/http": "workspace:~0.52.0",
     "@typespec/rest": "workspace:~0.52.0",
