--- a/.gitignore
+++ b/.gitignore
@@ -202,3 +202,6 @@ packages/samples/test/output/azure/templates-contoso/setup.*
 .idea/
 
 docs/**/js-api/
+
+# vitest temporary files
+**/vitest.config.ts.timestamp*
