try setting more data

--- a/eng/pipelines/ci.yml
+++ b/eng/pipelines/ci.yml
@@ -93,6 +93,7 @@ jobs:
         displayName: Dry run
 
       - script: |
+          pnpm config set registry=https://registry.npmjs.org/
           pnpm config set //registry.npmjs.org/:_authToken=$(azure-sdk-npm-token)
 
           pnpm -r --filter='!./core' publish --access public --no-git-checks --tag next
