--- a/eng/pipelines/ci.yml
+++ b/eng/pipelines/ci.yml
@@ -89,10 +89,14 @@ jobs:
       - script: node ./core/packages/internal-build-utils/cmd/cli.js bump-version-preview .
         displayName: Bump version to prerelease targets
 
-      - script: pnpm -r --filter='!./core' publish --access public --no-git-checks --tag next --dry-run
-        displayName: Dry run
+      - script: pnpm -r publish --access public --no-git-checks --tag next --dry-run
+        displayName: Dry run 1
+
+      - script: pnpm -r --filter='!@typespec/*' publish --access public --no-git-checks --tag next --dry-run
+        displayName: Dry run 2
 
       - script: |
+          pnpm config set loglevel=debug
           pnpm config set registry=https://registry.npmjs.org/
           pnpm config set //registry.npmjs.org/:_authToken=$(azure-sdk-npm-token)
 
