Use chronus for changelogs

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "pnpm -r --workspace-concurrency=Infinity --aggregate-output --reporter=append-only build ",
     "check-format": "pnpm run prettier --check",
     "check-version-mismatch": "syncpack list-mismatches",
-    "change": "changeset",
+    "change": "chronus",
     "clean": "pnpm -r run clean",
     "cspell": "cspell --no-progress \"**/*.{md,ts,tsx}\" ",
     "dogfood": "pnpm install && pnpm build && pnpm -r dogfood",
@@ -17,7 +17,7 @@
     "merge-coverage": "c8 -- report --reporter=cobertura --reporter=text",
     "pack:all": "node ./eng/scripts/pack-all.js",
     "preinstall": "npx only-allow pnpm",
-    "prepare-publish": "pnpm changeset version",
+    "prepare-publish": "pnpm chronus version",
     "prettier": "prettier . --config .prettierrc.json",
     "purge": "rimraf --glob \"packages/*/node_modules/\" --glob \"core/packages/*/node_modules/\"",
     "regen-docs": "pnpm -r  --parallel --aggregate-output --reporter=append-only run regen-docs",
@@ -30,6 +30,7 @@
   },
   "devDependencies": {
     "@changesets/cli": "^2.27.1",
+    "@chronus/chronus": "^0.4.0",
     "@pnpm/find-workspace-packages": "^6.0.9",
     "c8": "^8.0.1",
     "cspell": "^6.31.3",
