--- a/.github/workflows/consistency.yml
+++ b/.github/workflows/consistency.yml
@@ -15,7 +15,7 @@ jobs:
     name: Check Changes
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
         with:
           fetch-depth: 0 ## Needed for Changesets to find `main` branch
           submodules: recursive
@@ -33,7 +33,7 @@ jobs:
       - run: pnpm install
         name: Install dependencies
 
-      - run: npx -p @changesets/cli changeset status --since=main
+      - run: npx chronus verify
         name: Check changelog
         if: ${{ !startsWith(github.head_ref, 'publish/') && !startsWith(github.head_ref, 'dependabot/') && !startsWith(github.head_ref, 'backmerge/') }}
 
