--- a/eng/pipelines/jobs/build-and-test.yml
+++ b/eng/pipelines/jobs/build-and-test.yml
@@ -18,6 +18,9 @@ steps:
   - ${{ if ne(variables['Agent.OS'], 'Windows_NT') }}:
       - template: ../templates/install-browsers.yml
 
+  - script: pnpm run check-version-mismatch
+    displayName: Check version mismatch
+
   - template: ../templates/build.yml
 
   - script: pnpm run test-official
