--- a/packages/samples/package.json
+++ b/packages/samples/package.json
@@ -53,14 +53,14 @@
     "@typespec/internal-build-utils": "workspace:~0.53.0",
     "@typespec/eslint-config-typespec": "workspace:~0.53.0",
     "@typespec/samples": "workspace:~1.0.0",
-    "@types/node": "~18.11.9",
+    "@types/node": "~18.11.19",
     "cross-env": "~7.0.3",
-    "eslint": "^8.55.0",
-    "vitest": "^1.2.0",
-    "@vitest/coverage-v8": "^1.1.0",
-    "@vitest/ui": "~1.1.3",
+    "eslint": "^8.56.0",
+    "vitest": "^1.2.2",
+    "@vitest/coverage-v8": "^1.2.2",
+    "@vitest/ui": "^1.1.3",
     "autorest": "~3.3.2",
-    "rimraf": "~5.0.1",
+    "rimraf": "~5.0.5",
     "typescript": "~5.3.3"
   }
 }
