--- a/packages/typespec-azure-core/package.json
+++ b/packages/typespec-azure-core/package.json
@@ -66,13 +66,13 @@
     "@typespec/openapi": "workspace:~0.53.0",
     "@typespec/tspd": "workspace:~0.46.0",
     "@typespec/versioning": "workspace:~0.53.0",
-    "@types/node": "~18.11.9",
-    "eslint": "^8.55.0",
-    "vitest": "^1.2.0",
-    "@vitest/coverage-v8": "^1.1.0",
-    "@vitest/ui": "~1.1.3",
-    "c8": "~8.0.1",
-    "rimraf": "~5.0.1",
+    "@types/node": "~18.11.19",
+    "eslint": "^8.56.0",
+    "vitest": "^1.2.2",
+    "@vitest/coverage-v8": "^1.2.2",
+    "@vitest/ui": "^1.1.3",
+    "c8": "^8.0.1",
+    "rimraf": "~5.0.5",
     "typescript": "~5.3.3"
   }
 }
