--- a/packages/typespec-service-csharp/package.json
+++ b/packages/typespec-service-csharp/package.json
@@ -46,33 +46,33 @@
     "!dist/test/**"
   ],
   "peerDependencies": {
-    "@typespec/compiler": "workspace:~0.53.1",
-    "@typespec/rest": "workspace:~0.53.0",
-    "@typespec/http": "workspace:~0.53.0",
-    "@typespec/versioning": "workspace:~0.53.0",
-    "@azure-tools/typespec-autorest": "workspace:~0.39.1",
-    "@azure-tools/typespec-azure-core": "workspace:~0.39.0"
+    "@azure-tools/typespec-autorest": "workspace:~",
+    "@azure-tools/typespec-azure-core": "workspace:~",
+    "@typespec/compiler": "workspace:~",
+    "@typespec/http": "workspace:~",
+    "@typespec/rest": "workspace:~",
+    "@typespec/versioning": "workspace:~"
   },
   "dependencies": {
-    "change-case": "~5.3.0"
+    "change-case": "~5.4.2"
   },
   "devDependencies": {
-    "@typespec/compiler": "workspace:~0.53.1",
-    "@azure-tools/typespec-autorest": "workspace:~0.39.1",
-    "@typespec/openapi": "workspace:~0.53.0",
-    "@typespec/rest": "workspace:~0.53.0",
-    "@typespec/http": "workspace:~0.53.0",
-    "@azure-tools/typespec-azure-core": "workspace:~0.39.0",
+    "@azure-tools/typespec-autorest": "workspace:~",
+    "@azure-tools/typespec-azure-core": "workspace:~",
     "@types/node": "~18.11.19",
-    "@typespec/eslint-config-typespec": "workspace:~0.53.0",
-    "@typespec/library-linter": "workspace:~0.53.0",
-    "@typespec/eslint-plugin": "workspace:~0.53.0",
-    "@typespec/tspd": "workspace:~0.46.0",
-    "eslint": "^8.56.0",
+    "@typespec/compiler": "workspace:~",
+    "@typespec/eslint-config-typespec": "workspace:~",
+    "@typespec/eslint-plugin": "workspace:~",
+    "@typespec/http": "workspace:~",
+    "@typespec/library-linter": "workspace:~",
+    "@typespec/openapi": "workspace:~",
+    "@typespec/rest": "workspace:~",
+    "@typespec/tspd": "workspace:~",
+    "@vitest/coverage-v8": "^1.2.2",
     "c8": "^9.1.0",
+    "eslint": "^8.56.0",
     "rimraf": "~5.0.5",
     "typescript": "~5.3.3",
-    "vitest": "^1.2.2",
-    "@vitest/coverage-v8": "^1.2.2"
+    "vitest": "^1.2.2"
   }
 }
